<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/blueGray"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ImageView
    android:layout_width="272dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="24dp"
    android:src="@drawable/driveway_icon_regular" />



<!-- Email Label -->
<EditText android:id="@+id/emailEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:hint="@string/email_text" />

<!-- Password Label -->
<EditText android:id="@+id/passwordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:textColorHint="@color/white"
    android:textColor="@color/white"
    android:hint="@string/password_text"/>

    <!-- Log In Button -->
<android.support.v7.widget.AppCompatButton
    android:id="@+id/loginButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:text="@string/loginText"/>

<TextView android:id="@+id/register_textView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:textColor="@color/white"
    android:text="@string/noAccount"
    android:gravity="center"
    android:textSize="16dip"/>

</LinearLayout>
