<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/register_scrollView"
    android:fitsSystemWindows="true"
    android:background="@color/blueGray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <ImageView
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/driveway_icon_regular" />

        <!-- Name Label -->
        <EditText android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <!-- Email Label -->
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

        <!-- Password Label -->
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/register"/>

        <TextView android:id="@+id/login_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/alreadyAccount"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16dip"/>
        <ProgressBar
            android:id="@+id/register_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>