<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@id/layout_submit_button"
    android:foregroundGravity="center"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:background="@color/blueGray">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueGray">
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/blank_space_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_label_textView"
            android:layout_centerHorizontal="true"
            android:text="@string/information"
            android:textAlignment="center"
            android:layout_below="@id/blank_space_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/blank_space_2"
            android:layout_below="@+id/top_label_textView"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driveway_nickname_textEdit"
            android:layout_below="@+id/blank_space_2"
            android:hint="@string/drivewayname"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/blank_space_3"
            android:layout_below="@+id/driveway_nickname_textEdit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address-textEdit"
            android:hint="@string/address"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_below="@+id/blank_space_3"
            android:paddingLeft="10dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/blank_space_11"
            android:layout_below="@+id/address-textEdit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city-textEdit"
            android:hint="@string/city"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_below="@+id/blank_space_11"
            android:paddingLeft="10dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/blank_space_4"
            android:layout_below="@+id/city-textEdit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zip_code_textEdit"
            android:inputType="number"
            android:hint="@string/zipcode"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:layout_below="@+id/blank_space_4"
            android:paddingLeft="10dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:id="@+id/blank_space_5"
            android:layout_below="@+id/zip_code_textEdit"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state_spinner"
            android:layout_below="@+id/blank_space_5"
            android:textAlignment="center"
            android:autofillHints="@string/enterState"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

        </Spinner>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/blank_space_6"
            android:layout_below="@+id/state_spinner"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/country_spinner"
            android:layout_below="@+id/blank_space_6"
            android:paddingTop="10dp"
            android:paddingLeft="10dp">

        </Spinner>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/blank_space_7"
            android:layout_below="@+id/country_spinner"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startTime"
            android:id="@+id/start_time_textView"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_below="@+id/blank_space_7"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="italic" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/blank_space_8"
            android:layout_below="@+id/start_time_textView"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/end_time_TextView"
            android:hint="@string/endTime"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_below="@+id/blank_space_8"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="italic"
            android:onClick="showTimePickerDialog" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/blank_space_9"
            android:layout_below="@+id/end_time_TextView"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driveway_picture_button"
            android:paddingLeft="10dp"
            android:text="@string/addDrivewayPic"
            android:textStyle="italic"
            android:layout_below="@id/blank_space_9"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:id="@+id/blank_space_10"
            android:layout_below="@+id/driveway_picture_button"/>


    </RelativeLayout>
</ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blueGray"
        android:id="@+id/layout_submit_button">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            android:layout_centerHorizontal="true"
            android:text="@string/submit"
            android:textStyle="italic"/>
    </RelativeLayout>
</RelativeLayout>

